# html-parser

./: Cargo.toml  README.md
src/: document.rs  errors.rs  lib.rs  parser.rs
src/dom/: comment.rs  document.rs  document_fragment.rs  document_type.rs  element.rs  mod.rs  namespace.rs  processing_instruction.rs  text.rs
src/parser/: encodings.rs  errors.rs  force_quirks_check.rs  list_of_active_formatting_elements.rs  mod.rs  open_elements_stack.rs  parser_struct.rs  states.rs  transition_result.rs  transitions.rs
src/parser/transitions/: after_after_body.rs  after_body.rs  after_head.rs  before_head.rs  before_html.rs  force_quirks_check.rs  in_body.rs  in_head.rs  initial.rs  mod.rs  text.rs
src/tokenizer/: codepoint.rs  mod.rs  named_character_references.rs  state_machine.rs  states.rs  tagname.rs  token.rs  transition_result.rs  transitions.rs
src/tokenizer/errors/: mod.rs  parse_error.rs  transition_result.rs
tests/: testdata.rs
tests/testdata/: dos_newlines.html  duplicate_attribute.html  early_mac_newlines.html  google.html  inappropriate_end_tag.html  null_attr_name.html  null_attr_value.html  null_tag_name.html  simple1.html  simple2.html  simple3.html  simple4.html  simple5.html  simple6.html  twitter.html
