[package]
name = "html-parser"
version = "0.1.0"
authors = ["adam <ant1441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
machine = "0.3.0"
derive_more = "0.99.7"
log = "0.4.8"
pretty_env_logger = "0.4.0"
