[package]
name = "html-parser"
version = "0.1.0"
authors = ["adam <ant1441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# machine = "0.3.0"
derive_more = "0.99.7"
log = "0.4.8"
pretty_env_logger = "0.4.0"
once_cell = "1.4.0"
auto_enums = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"

[dev-dependencies]
itertools = "0.9.0"
